[package]
name = "burd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.27.2"
egui = "0.27.2"
reqwest = "0.12.3"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
